--- a/home.html
+++ b/home.html
@@ -4,28 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BudgetHeads</title>
+    <title>Document</title>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="Css/utils.css">
     <link rel="stylesheet" href="Css/home.css">
 </head>
 <body>
-    <nav class="navigation">
-        <div class="navi">
-            <ul>
-                <li><a href="home.html">BudgetHeads</a></li>
-                <li><a href="mobile.html">Mobile</a></li>
-                <li><a href="laptop.html">Laptop</a></li>
-                <li><a href="smartwatch.html">SmartWatch</a></li>
-                <li><a href="audio.html">Audio</a></li>
-                <li><a href="accessories.html">Accessories</a></li>
-                <li><a href="feedback.html">Feedback</a></li>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">BudgetHeads</a>
+          <button class="navbar-toggler" 
+          type="button" 
+          data-bs-toggle="collapse" 
+          data-bs-target="#navbarSupportedContent" 
+          aria-controls="navbarSupportedContent" 
+          aria-expanded="false" 
+          aria-label="Toggle navigation">
+
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse text-white" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link " aria-current="page" style="color: white; font-size: 2.2rem;" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: white; font-size: 2.2rem;" href="#">Mobile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: white; font-size: 2.2rem;" href="#">Laptop</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: white; font-size: 2.2rem;" href="#">SmartWatch</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: white; font-size: 2.2rem;" href="#">Audio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: white; font-size: 2.2rem;" href="#">Accessories</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" style="color: white; font-size: 2.2rem;" href="#">Feedback</a>
+              </li>
             </ul>
+            <button class="btn text-white">Logout</button>
+          </div>
         </div>
-        <div class="right">
-            
-            <button class="btn">Logout</button>
-        </div>
-    </nav>
+      </nav>
+      
     <div class="Images">
         <div class="left-side"></div>
         <div class="right-side"></div>
